[gd_scene load_steps=36 format=3 uid="uid://cgfllsenaa7s8"]

[ext_resource type="Script" path="res://level_11.gd" id="1_7xubt"]
[ext_resource type="Texture2D" uid="uid://d1wsodw6sylob" path="res://art/фото для фона и игры/фон1.png" id="2_ym15j"]
[ext_resource type="Texture2D" uid="uid://c1llis4cbs75g" path="res://art/фото для фона и игры/заяц0.png" id="3_an7ht"]
[ext_resource type="Texture2D" uid="uid://du1pkrog234f3" path="res://art/фото для фона и игры/мысль2.11.png" id="4_vbigl"]
[ext_resource type="Texture2D" uid="uid://6spmvfpxopty" path="res://art/фото для фона и игры/мысль3.1.png" id="5_0ysld"]
[ext_resource type="Texture2D" uid="uid://byjxgfmi21tw6" path="res://art/фото для фона и игры/фонарь.png" id="6_ioobg"]
[ext_resource type="Script" path="res://screen_button.gd" id="7_atsei"]
[ext_resource type="Texture2D" uid="uid://bkq3m7ur4ax71" path="res://art/фото для фона и игры/арбуз.png" id="8_kd5ei"]
[ext_resource type="Script" path="res://touch_screen_button.gd" id="9_cyn3r"]
[ext_resource type="Texture2D" uid="uid://dhdg1jb5qkwor" path="res://art/фото для фона и игры/сапоги.png" id="10_7kb26"]
[ext_resource type="Texture2D" uid="uid://3a2qhq0xyf78" path="res://art/фото для фона и игры/карта.png" id="11_8v1hc"]
[ext_resource type="Texture2D" uid="uid://ccnwt6lfj3sao" path="res://art/фото для фона и игры/вода.png" id="12_chvhu"]
[ext_resource type="Texture2D" uid="uid://3odo5cc03w1w" path="res://art/фото для фона и игры/лошадка2.png" id="13_qhcyr"]
[ext_resource type="FontFile" uid="uid://dqxwu1w1r1xh5" path="res://fonts/diffusion-light.ttf" id="14_vw30d"]
[ext_resource type="Script" path="res://label.gd" id="15_5ncv2"]
[ext_resource type="AudioStream" uid="uid://cce1xg1gcd1m5" path="res://sounds/песня правильного ответа.mp3" id="16_niydp"]
[ext_resource type="AudioStream" uid="uid://boeqcu3oenclt" path="res://sounds/неверно.mp3" id="17_n6wen"]
[ext_resource type="Texture2D" uid="uid://cpxrb014h83b3" path="res://art/фото для фона и игры/подсказка.png" id="18_thqgq"]
[ext_resource type="Script" path="res://подсказка.gd" id="19_tebad"]
[ext_resource type="PackedScene" uid="uid://7w1r6a8hfpf4" path="res://промежуточное_окно.tscn" id="20_ywkug"]
[ext_resource type="PackedScene" uid="uid://5x04a0cx745g" path="res://всплывающее_окно.tscn" id="21_s33ui"]
[ext_resource type="Texture2D" uid="uid://d3njycpcm5ni6" path="res://art/фото для фона и игры/пауза.png" id="22_e1mh2"]
[ext_resource type="Script" path="res://пауза.gd" id="23_je88h"]
[ext_resource type="Texture2D" uid="uid://dcu0uv1ur8o6c" path="res://art/фото для фона и игры/палатка1.png" id="24_v1q8k"]
[ext_resource type="Texture2D" uid="uid://m6a1ckeasl86" path="res://art/фото для фона и игры/юла.png" id="25_o3a6l"]
[ext_resource type="Texture2D" uid="uid://cjnt00hmrlvw" path="res://art/фото для фона и игры/аптечка.png" id="26_1whvl"]
[ext_resource type="Texture2D" uid="uid://ifa88p6cawow" path="res://art/фото для фона и игры/компас.png" id="27_le8el"]
[ext_resource type="Texture2D" uid="uid://cio45ypt15fme" path="res://art/фото для фона и игры/зонт.png" id="28_dvl0d"]
[ext_resource type="Texture2D" uid="uid://b8y44pc25qgl6" path="res://art/фото для фона и игры/мишка.png" id="29_uexcq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m0fab"]
radius = 336.0
height = 1088.0

[sub_resource type="GDScript" id="GDScript_3lhri"]
script/source = "extends Control
#var count_excess = 0


func _next_part_level():
	if get_node(\"TextureRect/rect12/арбуз_button\").is_pressed == true:
		var mainScene = load(\"res://главный_экран.gd\")
		get_tree().change_scene_to_packed(mainScene)
	#var mainScene = load(\"res://level_1.tscn\")
	#get_tree().change_scene_to_packed(mainScene)
"

[sub_resource type="GDScript" id="GDScript_ln437"]
script/source = "extends ColorRect



#func _on_input_event(event):
#	if event is InputEventScreenTouch:
#		if event.is_action_released(\"ui_touch\"):
			# Скрыть спрайт
#			self.visible = false
			
	#if Input.is_action_just_pressed(\"ui_touch\"):
	#	self.queue_free()

#func _on_button_pressed() -> void:
#	self.visible = false


func _on_texture_button_toggled(toggled_on: bool) -> void:
	pass # Replace with function body.
"

[sub_resource type="GDScript" id="GDScript_38qc1"]
script/source = "extends Control
#var count_excess = 0


func _next_part_level():
	if get_node(\"TextureRect/rect12/арбуз_button\").is_pressed == true:
		var mainScene = load(\"res://главный_экран.gd\")
		get_tree().change_scene_to_packed(mainScene)
	#var mainScene = load(\"res://level_1.tscn\")
	#get_tree().change_scene_to_packed(mainScene)
"

[sub_resource type="GDScript" id="GDScript_nk16x"]
script/source = "extends ColorRect



#func _on_input_event(event):
#	if event is InputEventScreenTouch:
#		if event.is_action_released(\"ui_touch\"):
			# Скрыть спрайт
#			self.visible = false
			
	#if Input.is_action_just_pressed(\"ui_touch\"):
	#	self.queue_free()

#func _on_button_pressed() -> void:
#	self.visible = false


func _on_texture_button_toggled(toggled_on: bool) -> void:
	pass # Replace with function body.
"

[sub_resource type="LabelSettings" id="LabelSettings_t6pxa"]
font_size = 105
font_color = Color(0, 0, 0, 1)
outline_color = Color(0.000113828, 0.000113828, 0.000113828, 1)

[node name="level_1" type="Node2D"]
script = ExtResource("1_7xubt")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1284.0
offset_bottom = 726.0
texture = ExtResource("2_ym15j")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1104, 429)
scale = Vector2(0.341623, 0.321875)
texture = ExtResource("3_an7ht")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D"]
visible = false
shape = SubResource("CapsuleShape2D_m0fab")

[node name="Мысль-облако" type="Sprite2D" parent="."]
position = Vector2(951, 229)
scale = Vector2(0.199902, 0.195772)
texture = ExtResource("4_vbigl")

[node name="Мысль кончик" type="Sprite2D" parent="."]
position = Vector2(994, 367)
scale = Vector2(0.286337, 0.307258)
texture = ExtResource("5_0ysld")

[node name="полка" type="Node2D" parent="."]

[node name="Control" type="Control" parent="полка"]
layout_mode = 3
anchors_preset = 0
offset_left = 94.0
offset_top = 66.0
offset_right = 775.0
offset_bottom = 580.0
script = SubResource("GDScript_3lhri")

[node name="TextureRect" type="ColorRect" parent="полка/Control"]
layout_mode = 0
offset_left = 13.0
offset_top = 69.0
offset_right = 694.0
offset_bottom = 521.0
scale = Vector2(1.0019, 1)
color = Color(0.733333, 0.345098, 0.168627, 0.501961)

[node name="rect11" type="ColorRect" parent="полка/Control/TextureRect"]
layout_mode = 0
offset_left = 27.0
offset_top = 26.0
offset_right = 217.0
offset_bottom = 206.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="фонарик_screen_button" type="TouchScreenButton" parent="полка/Control/TextureRect/rect11"]
position = Vector2(5.93742, 11)
scale = Vector2(0.0478979, 0.0482738)
texture_normal = ExtResource("6_ioobg")
script = ExtResource("7_atsei")
level_number = 1

[node name="rect12" type="ColorRect" parent="полка/Control/TextureRect"]
layout_mode = 0
offset_left = 247.0
offset_top = 26.0
offset_right = 437.0
offset_bottom = 206.0
color = Color(0.984314, 0.941176, 0.905882, 1)
script = SubResource("GDScript_ln437")

[node name="арбуз_button" type="TouchScreenButton" parent="полка/Control/TextureRect/rect12"]
position = Vector2(2.52591, 3)
scale = Vector2(0.0784878, 0.0764526)
texture_normal = ExtResource("8_kd5ei")
shape_visible = false
passby_press = true
action = "ui_touch"
script = ExtResource("9_cyn3r")
level_number = 1

[node name="rect13" type="ColorRect" parent="полка/Control/TextureRect"]
layout_mode = 0
offset_left = 467.0
offset_top = 26.0
offset_right = 657.0
offset_bottom = 206.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="сапоги_button" type="TouchScreenButton" parent="полка/Control/TextureRect/rect13"]
position = Vector2(22.0708, 8.00001)
scale = Vector2(0.444837, 0.462604)
texture_normal = ExtResource("10_7kb26")
script = ExtResource("7_atsei")
level_number = 1

[node name="rect14" type="ColorRect" parent="полка/Control/TextureRect"]
layout_mode = 0
offset_left = 247.0
offset_top = 246.0
offset_right = 437.0
offset_bottom = 426.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="карта_screen_button" type="TouchScreenButton" parent="полка/Control/TextureRect/rect14"]
position = Vector2(1.52779, -9.53674e-07)
scale = Vector2(0.22977, 0.27451)
texture_normal = ExtResource("11_8v1hc")
script = ExtResource("7_atsei")
level_number = 1

[node name="rect15" type="ColorRect" parent="полка/Control/TextureRect"]
layout_mode = 0
offset_left = 467.0
offset_top = 246.0
offset_right = 657.0
offset_bottom = 426.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="вода_screen_button" type="TouchScreenButton" parent="полка/Control/TextureRect/rect15"]
position = Vector2(41.4519, 6.99999)
scale = Vector2(0.0419724, 0.0329454)
texture_normal = ExtResource("12_chvhu")
script = ExtResource("7_atsei")
level_number = 1

[node name="rect16" type="ColorRect" parent="полка/Control/TextureRect"]
layout_mode = 0
offset_left = 27.0
offset_top = 246.0
offset_right = 217.0
offset_bottom = 426.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="лошадка_button" type="TouchScreenButton" parent="полка/Control/TextureRect/rect16"]
position = Vector2(1.94501, 0)
scale = Vector2(0.204715, 0.22375)
texture_normal = ExtResource("13_qhcyr")
passby_press = true
script = ExtResource("9_cyn3r")
level_number = 1

[node name="Label1" type="Label" parent="полка/Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 779.0
offset_top = 101.0
offset_right = 886.0
offset_bottom = 170.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("14_vw30d")
theme_override_font_sizes/font_size = 14
text = "Помоги найти вещи"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("15_5ncv2")
level_number = 1

[node name="Timer" type="Timer" parent="полка/Control"]
wait_time = 2.0
one_shot = true

[node name="Звук правильного ответа" type="AudioStreamPlayer2D" parent="полка"]
stream = ExtResource("16_niydp")

[node name="Не правильно" type="AudioStreamPlayer2D" parent="полка"]
stream = ExtResource("17_n6wen")

[node name="Timer" type="Timer" parent="полка"]
wait_time = 2.0
one_shot = true

[node name="полка2" type="Node2D" parent="."]
visible = false

[node name="Control" type="Control" parent="полка2"]
layout_mode = 3
anchors_preset = 0
offset_left = 94.0
offset_top = 66.0
offset_right = 775.0
offset_bottom = 580.0
script = SubResource("GDScript_38qc1")

[node name="TextureRect" type="ColorRect" parent="полка2/Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 68.0
offset_right = 696.0
offset_bottom = 520.0
scale = Vector2(1.0019, 1)
color = Color(0.733333, 0.345098, 0.168627, 0.501961)

[node name="rect11" type="ColorRect" parent="полка2/Control/TextureRect"]
layout_mode = 0
offset_left = 27.0
offset_top = 26.0
offset_right = 217.0
offset_bottom = 206.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="палатка_screen_button" type="TouchScreenButton" parent="полка2/Control/TextureRect/rect11"]
position = Vector2(-0.0511918, -1)
scale = Vector2(0.23705, 0.321492)
texture_normal = ExtResource("24_v1q8k")
script = ExtResource("7_atsei")
level_number = 1

[node name="rect13" type="ColorRect" parent="полка2/Control/TextureRect"]
layout_mode = 0
offset_left = 464.118
offset_top = 29.0
offset_right = 654.118
offset_bottom = 209.0
color = Color(0.984314, 0.941176, 0.905882, 1)
script = SubResource("GDScript_nk16x")

[node name="юла_button" type="TouchScreenButton" parent="полка2/Control/TextureRect/rect13"]
position = Vector2(13.9736, 1)
scale = Vector2(0.152488, 0.144167)
texture_normal = ExtResource("25_o3a6l")
shape_visible = false
passby_press = true
action = "ui_touch"
script = ExtResource("9_cyn3r")
level_number = 1

[node name="rect12" type="ColorRect" parent="полка2/Control/TextureRect"]
layout_mode = 0
offset_left = 245.534
offset_top = 25.0
offset_right = 435.534
offset_bottom = 205.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="аптечка_button" type="TouchScreenButton" parent="полка2/Control/TextureRect/rect12"]
position = Vector2(0.997596, 0)
scale = Vector2(0.229955, 0.217233)
texture_normal = ExtResource("26_1whvl")
script = ExtResource("7_atsei")
level_number = 1

[node name="rect14" type="ColorRect" parent="полка2/Control/TextureRect"]
layout_mode = 0
offset_left = 27.0
offset_top = 246.0
offset_right = 217.0
offset_bottom = 426.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="компас_screen_button" type="TouchScreenButton" parent="полка2/Control/TextureRect/rect14"]
position = Vector2(0.946903, -2.38419e-06)
scale = Vector2(0.37039, 0.353516)
texture_normal = ExtResource("27_le8el")
script = ExtResource("7_atsei")
level_number = 1

[node name="rect15" type="ColorRect" parent="полка2/Control/TextureRect"]
layout_mode = 0
offset_left = 247.0
offset_top = 246.0
offset_right = 437.0
offset_bottom = 426.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="зонт_screen_button" type="TouchScreenButton" parent="полка2/Control/TextureRect/rect15"]
position = Vector2(2.52593, 3.99997)
scale = Vector2(0.145037, 0.148398)
texture_normal = ExtResource("28_dvl0d")
script = ExtResource("7_atsei")
level_number = 1

[node name="rect16" type="ColorRect" parent="полка2/Control/TextureRect"]
layout_mode = 0
offset_left = 467.0
offset_top = 246.0
offset_right = 657.0
offset_bottom = 426.0
color = Color(0.984314, 0.941176, 0.905882, 1)

[node name="мишка_button" type="TouchScreenButton" parent="полка2/Control/TextureRect/rect16"]
position = Vector2(1.11061, 0)
scale = Vector2(0.183246, 0.173828)
texture_normal = ExtResource("29_uexcq")
passby_press = true
script = ExtResource("9_cyn3r")
level_number = 1

[node name="Label1" type="Label" parent="полка2/Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 778.0
offset_top = 102.0
offset_right = 885.0
offset_bottom = 171.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("14_vw30d")
theme_override_font_sizes/font_size = 14
text = "Помоги найти вещи"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("15_5ncv2")
level_number = 1
metadata/_edit_group_ = true

[node name="Timer" type="Timer" parent="полка2/Control"]
one_shot = true

[node name="Звук правильного ответа" type="AudioStreamPlayer2D" parent="полка2"]
stream = ExtResource("16_niydp")

[node name="Не правильно" type="AudioStreamPlayer2D" parent="полка2"]
stream = ExtResource("17_n6wen")

[node name="подсказкафон" type="TextureRect" parent="."]
visible = false
offset_left = 350.0
offset_top = 570.0
offset_right = 3430.0
offset_bottom = 920.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("18_thqgq")

[node name="Подсказка" type="Label" parent="подсказкафон"]
layout_mode = 0
offset_left = 400.0
offset_top = 85.0
offset_right = 2973.0
offset_bottom = 285.0
text = "\"Подсказка: снаружи зеленый, внутри красный\""
label_settings = SubResource("LabelSettings_t6pxa")
script = ExtResource("19_tebad")
level = 2

[node name="промежуточное окно" parent="." instance=ExtResource("20_ywkug")]
visible = false
position = Vector2(-7, 21)

[node name="Всплывающее окно" parent="." instance=ExtResource("21_s33ui")]
visible = false
position = Vector2(89, 45)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Пауза" type="TouchScreenButton" parent="."]
position = Vector2(13, 16)
scale = Vector2(0.205036, 0.22314)
texture_normal = ExtResource("22_e1mh2")
script = ExtResource("23_je88h")
num = "Control"
level = "1"

[connection signal="pressed" from="полка/Control/TextureRect/rect11/фонарик_screen_button" to="полка/Control/TextureRect/rect11/фонарик_screen_button" method="_on_pressed"]
[connection signal="pressed" from="полка/Control/TextureRect/rect11/фонарик_screen_button" to="полка/Control/Label1" method="update_text"]
[connection signal="pressed" from="полка/Control/TextureRect/rect12/арбуз_button" to="полка/Control/TextureRect/rect12/арбуз_button" method="_on_pressed"]
[connection signal="pressed" from="полка/Control/TextureRect/rect13/сапоги_button" to="полка/Control/TextureRect/rect13/сапоги_button" method="_on_pressed"]
[connection signal="pressed" from="полка/Control/TextureRect/rect13/сапоги_button" to="полка/Control/Label1" method="update_text"]
[connection signal="pressed" from="полка/Control/TextureRect/rect14/карта_screen_button" to="полка/Control/TextureRect/rect14/карта_screen_button" method="_on_pressed"]
[connection signal="pressed" from="полка/Control/TextureRect/rect14/карта_screen_button" to="полка/Control/Label1" method="update_text"]
[connection signal="pressed" from="полка/Control/TextureRect/rect15/вода_screen_button" to="полка/Control/TextureRect/rect15/вода_screen_button" method="_on_pressed"]
[connection signal="pressed" from="полка/Control/TextureRect/rect15/вода_screen_button" to="полка/Control/Label1" method="update_text"]
[connection signal="pressed" from="полка/Control/TextureRect/rect16/лошадка_button" to="полка/Control/TextureRect/rect16/лошадка_button" method="_on_pressed"]
[connection signal="timeout" from="полка/Control/Timer" to="полка/Control/TextureRect/rect11/фонарик_screen_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="полка/Control/Timer" to="полка/Control/TextureRect/rect12/арбуз_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="полка/Control/Timer" to="полка/Control/TextureRect/rect14/карта_screen_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="полка/Control/Timer" to="полка/Control/TextureRect/rect15/вода_screen_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="полка/Control/Timer" to="полка/Control/TextureRect/rect16/лошадка_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="полка/Control/Timer" to="полка/Control/Label1" method="update_text"]
[connection signal="pressed" from="полка2/Control/TextureRect/rect11/палатка_screen_button" to="полка2/Control/TextureRect/rect11/палатка_screen_button" method="_on_pressed"]
[connection signal="pressed" from="полка2/Control/TextureRect/rect11/палатка_screen_button" to="полка2/Control/Label1" method="update_text"]
[connection signal="pressed" from="полка2/Control/TextureRect/rect13/юла_button" to="полка2/Control/TextureRect/rect13/юла_button" method="_on_pressed"]
[connection signal="pressed" from="полка2/Control/TextureRect/rect12/аптечка_button" to="полка2/Control/TextureRect/rect12/аптечка_button" method="_on_pressed"]
[connection signal="pressed" from="полка2/Control/TextureRect/rect12/аптечка_button" to="полка2/Control/Label1" method="update_text"]
[connection signal="pressed" from="полка2/Control/TextureRect/rect14/компас_screen_button" to="полка2/Control/TextureRect/rect14/компас_screen_button" method="_on_pressed"]
[connection signal="pressed" from="полка2/Control/TextureRect/rect14/компас_screen_button" to="полка2/Control/Label1" method="update_text"]
[connection signal="pressed" from="полка2/Control/TextureRect/rect15/зонт_screen_button" to="полка2/Control/TextureRect/rect15/зонт_screen_button" method="_on_pressed"]
[connection signal="pressed" from="полка2/Control/TextureRect/rect15/зонт_screen_button" to="полка2/Control/Label1" method="update_text"]
[connection signal="pressed" from="полка2/Control/TextureRect/rect16/мишка_button" to="полка2/Control/TextureRect/rect16/мишка_button" method="_on_pressed"]
[connection signal="timeout" from="полка2/Control/Timer" to="полка2/Control/TextureRect/rect11/палатка_screen_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="полка2/Control/Timer" to="полка2/Control/TextureRect/rect13/юла_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="полка2/Control/Timer" to="полка2/Control/TextureRect/rect14/компас_screen_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="полка2/Control/Timer" to="полка2/Control/TextureRect/rect15/зонт_screen_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="полка2/Control/Timer" to="полка2/Control/TextureRect/rect16/мишка_button" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="полка2/Control/Timer" to="полка2/Control/Label1" method="update_text"]
[connection signal="timeout" from="Timer" to="." method="_process"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Пауза" to="." method="_on_пауза_pressed"]
